fix(skill): handle root-level skill in saveSkills and fix potential NPE